--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
-version='1.0.0-beta'
+version='1.0.1'
 
 license {
     header rootProject.file('License.md')
