--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 sudo: false
 deploy:
   provider: releases
-  file: build/libs/xld-sybase-plugin-1.0.0-beta.jar
+  file: build/libs/xld-sybase-plugin-1.0.2.jar
   skip_cleanup: true
   on:
     all_branches: true
