--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ version='1.0.3'
 license {
     header rootProject.file('License.md')
     strictCheck false
-    excludes(["**/*.json"])
+    excludes(["**/*.json"],["**/*.ftl"])
     ext.year = Calendar.getInstance().get(Calendar.YEAR)
     ext.name = 'XEBIALABS'
 }
