--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
+import org.apache.tools.ant.filters.ReplaceTokens
+
 plugins {
-    id "com.github.hierynomus.license" version "0.13.0"
+    id "com.xebialabs.xldp" version "1.0.5"
 }
 
 defaultTasks 'build'
@@ -7,12 +9,16 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
-version='1.0.7'
+version='1.0.8'
 
-license {
-    header rootProject.file('License.md')
-    strictCheck false
-    excludes(["**/*.json", "**/*.ftl"])
-    ext.year = Calendar.getInstance().get(Calendar.YEAR)
-    ext.name = 'XEBIALABS'
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+processResources.configure {
+    filter ReplaceTokens, tokens: [
+            'project.version': version.toString(),
+            'project.name': rootProject.name
+    ]
 }
